# AI-Hud-Challenge

./: .coverage  .coveragerc  .dockerignore  .env.backup  .gitignore  .pre-commit-config.yaml  AI_PIPELINE_README.md  API_DOCUMENTATION.md  AWS_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY.md  Dockerfile  Dockerfile.aws  Dockerfile.fast  HUGGINGFACE_DEPLOYMENT.md  Makefile  PROJECT_SUMMARY.md  README.md  README_HF.md  SECURITY_FIX_GUIDE.md  TROUBLESHOOTING.md  app.py  app_minimal.py  app_simple.py  apprunner.yaml  config.env.example  deploy-pipeline.sh  deploy_all.sh  deploy_all_services.sh  docker-compose.dev-simple.yml  docker-compose.dev.yml  docker-compose.pipeline.yml  docker-compose.test.yml  docker-compose.yml  env.example  fix_remaining_syntax.py  fix_syntax_errors.py  package.json  prometheus.yml  pyproject.toml  (+7 more)
.github/: README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: backup.yml  cd.yml  ci-cd.yml  ci.yml  cleanup.yml  deploy-production.yml  deploy.yml  docker-build.yml  docker.yml  main.yml  monitoring.yml  performance.yml  release.yml  security.yml  test.yml
ai-pipeline-service/: Dockerfile  main.py  requirements.txt
ai-pipeline-service/src/: __init__.py
api/: index.py
config/: service-account-key.json
content-enrichment-service/: .coveragerc  Dockerfile  Dockerfile.dev  README.md  deploy.sh  docker-compose.yml  env.example  init.sql  prometheus.yml  pytest.ini  requirements.txt
content-enrichment-service/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
content-enrichment-service/src/: main.py
content-extraction-service/: Dockerfile  Dockerfile.dev  cloudbuild.yaml  docker-compose.yml  requirements.txt
content-extraction-service/k8s/: deployment.yaml
content-extraction-service/src/: exceptions.py  main.py
dashboard-frontend/: Dockerfile  nginx.conf  package.json  tailwind.config.js
dashboard-frontend/src/: App.js  index.css
dashboard-service/: Dockerfile  requirements.txt
dashboard-service/src/: __init__.py  main.py
deduplication-service/: .coverage  Dockerfile  Dockerfile.dev  README.md  deploy.sh  docker-compose.yml  env.example  init.sql  prometheus.yml  pyproject.toml  redis.conf  requirements.txt
deduplication-service/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deduplication-service/src/: __init__.py  main.py
deduplication-service/src/algorithms/lsh/: __init__.py  lsh_index.py  minhash.py
deduplication-service/src/algorithms/similarity/: __init__.py  combined.py  semantic.py
deduplication-service/src/clustering/: event_grouping.py  incremental_dbscan.py
deduplication-service/src/config/: settings.py
deduplication-service/src/deduplication/: pipeline.py
deduplication-service/src/models/: database.py  schemas.py
deduplication-service/src/monitoring/: metrics.py
deduplication-service/src/utils/: cache.py  database.py
deduplication-service/tests/: conftest.py  test_clustering.py  test_deduplication.py  test_minhash.py
deployment/: .dockerignore  Dockerfile  docker-compose.yml  prometheus.yml  redis.conf
deployment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  redis.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deployment/terraform/: cloud_run.tf  iam.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  redis.tf  secrets.tf  variables.tf
evaluation-service/: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  env.example  prometheus.yml  requirements.txt
evaluation-service/src/: main.py
evaluation-service/tests/: test_evaluation.py  test_evaluation_simple.py  test_evaluation_working.py
feedback-service/: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  env.example  init.sql  prometheus.yml  requirements.txt
feedback-service/frontend/: Dockerfile.dev  package.json
feedback-service/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  (+3 more)
ingestion-service/: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  requirements.txt
kubernetes/: deployment.yaml  redis.yaml
mlops-orchestration-service/: Dockerfile  Dockerfile.dev  PROJECT_SUMMARY.md  README.md  docker-compose.yml  init.sql  prometheus.yml  requirements.txt
monitoring/: prometheus.yml
notification-service/: Dockerfile  Dockerfile.dev  PROJECT_SUMMARY.md  README.md  docker-compose.yml  env.example  prometheus.yml  pyproject.toml  requirements.txt
observability-service/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  prometheus.yml  requirements.txt
personalization-service/: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  env.example  init.sql  prometheus.yml  requirements.txt
realtime-interface-service/: Dockerfile  requirements.txt
safety-service/: Dockerfile  Dockerfile.dev  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  env.example  init.sql  prometheus.yml  requirements.txt  start.sh  test_installation.py
scripts/: build-all-services.sh  deploy-to-gcp.sh  init-db.sql  smoke_tests.py  update_dashboards.py  wait-for-services-simple.sh  wait-for-services.sh
src/: .dockerignore  Dockerfile  Dockerfile.dev  __init__.py  main.py  main_vercel.py  requirements.txt  schemas.py
storage-service/: Dockerfile  Dockerfile.dev  README.md  config.env.example  docker-compose.yml  init.sql  prometheus.yml  redis.conf  requirements.txt
summarization-service/: Dockerfile  Dockerfile.dev  PROJECT_SUMMARY.md  README.md  docker-compose.yml  env.example  nginx.conf  prometheus.yml  redis.conf  requirements.txt
tests/: test_api.py  test_integration.py  test_personalization.py  test_ranking_engine.py
(+448 files in other folders)
